<resources>
    <string name="app_name">EnglishTest</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="practice">تمرین</string>
    <string name="test">آزمون</string>
    <string name="test_logs">سوابق آزمونهای گذشته</string>
    <string name="font_size">اندازه قلم</string>
    <string name="show_timer_in_test">نمایش زمانسنج در آزمون</string>
    <string name="about_developer">درباره تولیدکننده</string>
    <string name="drawer_title">سوالات زبان کنکور</string>
    <string name="all_majors">تمامی گروه های تحصیلی</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="__1">1 -</string>
    <string name="pause_test">توقف آزمون</string>
    <string name="stop_test">خاتمه آزمون</string>
    <string name="reading">Reading</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisi   sed do eiusmod tempor incididunt ut labore etrt       magna aliqua. Ut enim ad minim veniam, quisd      exercitation ullamco laboris nisi ut aliquip exa      do consequat. Duis aute irure dolor?voluptate       velit esse cillum dolore eu fugiat ??sint occaec      cupidatat non proident, sunt in culpa qui officia derunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</string>
    <string name="correct_count">تعداد گزینه صحیح: </string>
    <string name="question_count">تعداد سوال: </string>
    <string name="blank_count">تعداد گزینه نزده:</string>
    <string name="question_num">شماره سوال</string>
    <string name="correct_answer">جواب صحیح</string>
    <string name="your_answer">پاسخ شما</string>
    <string name="question_ended">سوالات شما به پایان رسید</string>
    <string name="return_and_continue_test">بازگشت و ادامه آزمون</string>
    <string name="show_result">مشاهده کارنامه</string>
    <string name="compare_with_prev_tests">مقایسه با آزمون‌های قبلی</string>
    <string name="return_home">بازگشت به صفحه اصلی</string>
    <string name="retake_test">آزمون مجدد</string>
    <string name="comapre_test_title">مقایسه با آزمون‌های قبلی</string>
    <string name="prev_test">آزمون قبلی:</string>
    <string name="current_test">آزمون فعلی:</string>
    <string name="prev_test1">آزمون قبلی</string>
    <string name="current_test1">آزمون فعلی</string>
    <string name="select_font_size">انتخاب اندازه متن</string>
    <string name="exit_test_dialog_title">برای خروج از آزمون اطمینان دارید؟</string>
    <string name="exit_test_confirm">بله خارج می‌شوم</string>
    <string name="cancel_exit_test_dialog">خیر، ادامه آزمون</string>
</resources>
