<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/white_corners"
    android:minWidth="320dp"
    android:orientation="vertical"
    app:layout_constrainedWidth="true"
    app:layout_constraintHeight_percent="0.48"
    app:layout_constraintWidth_percent="0.89">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/exit_test_dialog_title"
        android:textColor="#003366"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="@font/iransans_medium" />

    <View
        android:id="@+id/view_exit"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/dialog_button_background"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <View
        android:id="@+id/view_continue"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dialog_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_exit" />

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/exit_test_confirm"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view_exit"
        app:layout_constraintEnd_toEndOf="@+id/view_exit"
        app:layout_constraintStart_toStartOf="@+id/view_exit"
        app:layout_constraintTop_toTopOf="@+id/view_exit"
        app:layout_constraintVertical_bias="0.0"
        tools:fontFamily="@font/iransans_medium" />


    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_exit_test_dialog"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view_continue"
        app:layout_constraintEnd_toEndOf="@+id/view_continue"
        app:layout_constraintStart_toStartOf="@+id/view_continue"
        app:layout_constraintTop_toTopOf="@+id/view_continue"
        tools:fontFamily="@font/iransans_medium" />
</androidx.constraintlayout.widget.ConstraintLayout>